--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,42 @@
+:root {
+  --primary-text-color: #212121;
+  --primary-white-color: #ffffff;
+  --accent-color: #2196f3;
+  --secondary-text-color: #757575;
+  --header-background-color: #2f303a;
+  --secondary-background-color: #f5f4fa;
+  --primary-background-color: #e5e5e5;
+}
 body {
+  color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
+  background-color: var(--primary-white-color);
 }
 .page {
-  color: #212121;
-  background-color: #ffffff;
+  color: var(--primary-text-color);
+  background-color: var(--primary-white-color);
 }
 .logo {
-  color: #212121;
+  color: var(--primary-text-color);
+  font-family: Raleway, sans-serif;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
 }
 .accent {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .logo:hover {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .accent:hover {
-  color: #212121;
+  color: var(--primary-text-color);
 }
 .list {
   list-style: none;
+}
+.link {
+  text-decoration: none;
 }
 /* основной цвет текста #212121 */
 /* цвет второстепенного текста #757575 */
@@ -29,22 +47,176 @@ body {
 /* цвет фона вторичный #F5F4FA; */
 
 /* site-nav */
+button {
+  font-family: inherit;
+}
+.nav-header {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
 .site-nav a {
-  color: #212121;
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .site-nav a:hover,
 .site-nav a:focus {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .site-nav .link.current {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .hero {
-  background-color: #2f303a;
+  background-color: var(--primary-text-color);
 }
 .hero-title {
-  color: #ffffff;
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.hero-button {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  align-items: center;
+  text-align: center;
+}
+.features-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
 }
 .features-text {
-  color: #757575;
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.about,
+.team {
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.team-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+.auth-nav {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+.auth-nav a:hover,
+.auth-nav a:focus {
+  color: var(--accent-color);
+}
+.auth-nav .link.current {
+  color: var(--accent-color);
+}
+
+.button-primary,
+.button {
+  color: var(--primary-text-color);
+  background-color: var(--secondary-background-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+.button-secondary {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+.items-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+}
+.items-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-text-color);
+}
+.footer-list {
+  list-style: none;
+}
+.footer-list a:hover,
+.footer-list a:focus {
+  color: var(--primary-white-color);
+}
+
+footer {
+  background-color: var(--header-background-color);
+}
+.footer-logo {
+  color: var(--primary-white-color);
+  font-family: Raleway, sans-serif;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+.footer-logo:hover {
+  color: var(--accent-color);
+}
+.footer-accent {
+  color: var(--accent-color);
+}
+.footer-accent:hover {
+  color: var(--primary-white-color);
+}
+.footer-list .current.link {
+  color: var(--primary-white-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.info-footer {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
