--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,9 @@ button {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+.team-background {
+  background-color: var(--secondary-background-color);
+}
 .about,
 .team {
   font-size: 36px;
@@ -163,7 +166,6 @@ button {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-
   color: var(--secondary-text-color);
 }
 
